fixes heading on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ section {
   text-align: center; }
 
 section h2 {
-  margin-bottom: 50px; }
+  margin: 0 10px 50px 10px; }
 
 #sponsors .logos {
   display: flex;
