--- a/css/sass/views/_home.scss
+++ b/css/sass/views/_home.scss
@@ -53,7 +53,7 @@ section {
 }
 
 section h2 {
-    margin-bottom: 50px;
+    margin: 0 10px 50px 10px;
 }
 
 #sponsors .logos {
